--- a/index.html
+++ b/index.html
@@ -41,19 +41,55 @@
 					</dl>
 				</div>	
 			</div>
-			<div class="head-bottom clearfix">
+		</div>
+		<!--<div class="head-bottom clearfix">
 				<img src="images/head-bottom.jpg" alt="" usemap="#head_btm"/>
 				<map name="head_btm">
 					<area shape="rect" coords="360,74,625,184" href="https://baidu.com" alt="" target="_blank" >
 					<area shape="rect" coords="764,74,1029,184" href="https://baidu.com" alt="" target="_blank">
 					<area shape="rect" coords="1174,74,1439,184" href="https://baidu.com" alt="" target="_blank">
 				</map>
+		</div>-->
+		
+			<div class="head-buttom clearfix">
+				<div class="center">
+				<ul>
+				<li class="big">
+					<h2>研究</h2>
+					<strong>前瞻性思考，超常规行动，敢为天下先。</strong>
+				</li>
+				<li class="small">
+					<p>找到我们的目标</p>
+				</li>
+				</ul>
+				<ul>
+				<li class="big">
+					<h2>策略</h2>
+					<strong>前找到属于品牌的独特价值<br />开启成长新动力</strong>
+				</li>
+				<li class="small">
+					<p>达成目标的方法</p>
+				</li>
+				</ul>
+				<ul class="MR0">
+				<li class="big">
+					<h2>执行</h2>
+					<strong>剔除表象、直面本质<br />与众不同的思考与独特美学，达你所愿</strong>
+				</li>
+				<li class="small">
+					<p>落地实行与呈现</p>
+				</li>
+				</ul>
+				</div>
 			</div>
-		</div>
 	</div>
+	
 	<div id="content">
 		<div class="layer clearfix">
-			<img class="service" src="images/content-service.jpg" alt="" />
+			<div class="content-l clearfix">
+				<a href=""><img class="service" src="images/content-service-QR.jpg" alt="" /></a>
+			</div>
+			<!--<img class="service" src="images/content-service.jpg" alt="" />-->
 			<div class="content-r clearfix">
 				<ul>
 					<li>
@@ -132,6 +168,77 @@
 			</div>
 		</div>
 	</div>
+	
+	<div id="case">
+		<div class="layer">
+			<div class="case-head">
+				<p>每一次优秀的服务，我们都只在乎一点，是否一起创造了价值！</p>
+			</div>
+		</div>
+		<img src="images/case-ppt1.jpg"/>
+		<div class="layer description">		
+			<span><strong>悦胜： 五星级酒店海鲜供货商。</strong>互联网生鲜领导品牌之一</span>
+		</div>
+		<img src="images/case-ppt1.jpg"/>
+		<div class="layer description">		
+			<span><strong>悦胜： 五星级酒店海鲜供货商。</strong>互联网生鲜领导品牌之一</span>
+		</div>
+		<img src="images/case-ppt1.jpg"/>
+		<div class="layer description">		
+			<span><strong>悦胜： 五星级酒店海鲜供货商。</strong>互联网生鲜领导品牌之一</span>
+		</div>
+		<img src="images/case-ppt1.jpg"/>
+		<div class="layer description">		
+			<span><strong>悦胜： 五星级酒店海鲜供货商。</strong>互联网生鲜领导品牌之一</span>
+		</div>
+		<img src="images/case-ppt1.jpg"/>
+		<div class="layer description">		
+			<span><strong>悦胜： 五星级酒店海鲜供货商。</strong>互联网生鲜领导品牌之一</span>
+		</div>
+		<img src="images/case-ppt1.jpg"/>
+		<div class="layer description">		
+			<span><strong>悦胜： 五星级酒店海鲜供货商。</strong>互联网生鲜领导品牌之一</span>
+		</div>
+		<img src="images/case-ppt1.jpg"/>
+		<div class="layer description mb77">		
+			<span><strong>悦胜： 五星级酒店海鲜供货商。</strong>互联网生鲜领导品牌之一</span>
+		</div>
+	</div>
+	
+	<div id="know">
+		<div class="layer">
+			<ul class="clearfix">
+				<li class="know_1">
+					<h3>创新的品牌培植</h3>
+					<i>Innovative brand cultivation</i>
+					<p>具备服务中国顶尖企业与全行业品牌咨询服务经验，我们深刻理解中国企业在各个阶段的要求，是与市场实际高度结合的战略规划。</p>
+				</li>
+				<li class="know_1">
+					<h3>出色的创意设计</h3>
+					<i>Excellent creative design</i>
+					<p>一切从感情出发，用感受打动人心，并以传播效果为先导。从创意到实施的每一个阶段都贯穿整合、传播、营销的理念。追求高性价比，为客户提供超乎期待的创意方案。</p>
+				</li>
+				<li class="know_2">
+					<h3>了解我们的产品与服务</h3>
+					<span>0755</span>
+				</li>
+			</ul>
+		</div>
+	</div>
+	
+	<div id="foot">
+		<div class="center">
+			<p class="tit"><span>VEI</span>THINK</p>
+			<h4>深圳与行品牌设计有限公司</h4>
+			<div class="foot_pane clearfix">
+			<p class="ads ml53">公司地址：深圳宝安中央大道B座13ML</p><p class="ads ml42">品牌咨询：0755-23042521 </p><p class="ads ml15"> 186 766 91914</p>
+			</div>
+			<div class="clearfix QQ">
+			<label>QQ：842788831 </label><label class="ml16">E-mail:842788831@qq.com</label><label class="ml33">粤ICP备15001987号-1</label>
+			</div>
+		</div>
+	</div>
+	
 	<div id="role">
 		<div class="role-top">
 			<img src="images/role-wechat.jpg" alt="" />
